# tangle

./: .gitignore  GoogleCloud.md  README.md  pyproject.toml
helpers/: README.md
scripts/: bq-load-assets.py  bq-schema.py  cluster-align.py  defaults.py  demux-detected.py  demux-mmseq-clusters.py  demux-outputs.py  fasta-emit.py  fasta-pool.py  filter-clustered-proteins.py  filter-proteins.py  genome-get-sequence.py  genome-parse-protein.py  manifest.py  mmseqs-cluster.py  parse-odb.py  remove-contained.py  update-table.py
scripts/area/: genome-list.py
scripts/world/: kegg-download-module-defs.py  kegg-download.sh  ncbi-download.py  ncbi-genome-metadata.py  odb-download.sh  parse-odb.py  parse-pfam-go.py  parse-uniprot-dat.py  pfam-download.sh
tangle/: __init__.py  cluster.py  defaults.py  detected.py  exp.py  genomes.py  kegg.py  manifest.py  models.py  orthodb.py  pfam.py  project.py  protein.py  rules.py  seq.py  sequence.py  uniprot.py
tests/: test_detected.py  test_models.py  test_project.py  test_sequence.py
tests/scripts/: test_bq_schema.py  test_demux_outputs.py  test_filter_cluster.py  test_filter_proteins.py  test_pool_contigs.py
tests/tangle/: test_kegg.py  test_models.py  test_project.py  test_protein.py  test_rules.py  test_sequence.py
